--- a/樊川 软件开发工程师.md
+++ b/樊川 软件开发工程师.md
@@ -14,35 +14,39 @@
 
 依次执行直到遍历完数组然后返回结果并结束程序
 
-![enter description here](./images/as.jpg)
+![代码流程](as.jpg)
+
 
 **调用方法：**
 	**我建议相关功能封装成一个方法，只对外暴露process(String text,int width)方法，到时候只需要调用TextProcessor.process(... , ...)方法即可.**
-	```
-	public class Main{
-		public static void main(String[] args) {
-       TextProcessor.process("hssssssssssssssxaaaaa"+"aaaaaaaaaaaaaaaaa", 10);
-	}
+	
+```
+public class Main{
+public static void main(String[] args) {
+	TextProcessor.process("hssssssssssssssxaaaaa"+"aaaaaaaaaaaaaaaaa", 10);
 }
-	```
+}
+```
 
 **结果测试：**
+
 *测试用例：*
-1、"The main theme of education in engineering school is learning to teach yourself",10
-2、"a",20		
-3、 "hsssssssssssssssssssssssssssssssssssssssssssxaaaaaaaaaaaaaaaaaaaaaa",20
-4、"assassa--------+",30
-5、"aaaaaaaaaaaaaaaaaaaaaaaaaaaa",5
-6、"The main theme of education in engineering school is learning to teach yourself",30
-7、"So   many whitespaces",10
+1. "The main theme of education in engineering school is learning to teach yourself",10
+2. "a",20		
+3. "hsssssssssssssssssssssssssssssssssssssssssssxaaaaaaaaaaaaaaaaaaaaaa",20
+4. "assassa--------+",30
+5. "aaaaaaaaaaaaaaaaaaaaaaaaaaaa",5
+6. "The main theme of education in engineering school is learning to teach yourself",30
+7. "So   many whitespaces",10
+
 *结果：*
- 1、The(1); (1);main(1); (1);teme(1,2); (2);of(2); (2);edcation(2,3); (3);in(3); (4);engineerig(4,5); (5);school(5); (5);is(6); (6);learnin(6,7); (7);to(7); (7);teach(7); (8);yourself(8);
-2、a(1);
-3、hsssssssssssssssssssssssssssssssssssssssssxaaaaaaaaaaaaaaaaaaaaa(1,2,3,4);
-4、ERROR: Invalid character detected!
-5、ERROR: Width out of range!
-6、The(1); (1);main(1); (1);theme(1); (1);of(1); (1);education(1); (1);in(1); (2);engineering(2); (2);school(2); (2);is(2); (2);learnin(2,3); (3);to(3); (3);teach(3); (3);yourself(3);
-7、So(1);   (1);many(1); (1);whitespace(2,3);
+ 1. The(1); (1);main(1); (1);teme(1,2); (2);of(2); (2);edcation(2,3); (3);in(3); (4);engineerig(4,5); (5);school(5); (5);is(6); (6);learnin(6,7); (7);to(7); (7);teach(7); (8);yourself(8);
+2. a(1);
+3. hsssssssssssssssssssssssssssssssssssssssssxaaaaaaaaaaaaaaaaaaaaa(1,2,3,4);
+4. ERROR: Invalid character detected!
+5. ERROR: Width out of range!
+6. The(1); (1);main(1); (1);theme(1); (1);of(1); (1);education(1); (1);in(1); (2);engineering(2); (2);school(2); (2);is(2); (2);learnin(2,3); (3);to(3); (3);teach(3); (3);yourself(3);
+7. So(1);   (1);many(1); (1);whitespace(2,3);
 
 **经检验上述所有测试数据通过测试** 
 ——+——
